Backported to 1.18.2